[project]
name = "macos-agents"
version = "0.1.0"
description = "Multi-agent system that can execute tasks on macos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=0.3.11",
    "langchain-openai>=0.3.13",
    "langgraph>=0.3.30",
]

[project.scripts]
macos-agents = "macos_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["httpx[socks]>=0.28.1"]